--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 </head>
 <body>
 
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper blue darken-4">
+        <ul id="nav-mobile" class="center hide-on-med-and-down">
+          <li><a href="#about" class="waves-effect waves-light">About Me</a></li>
+          <li><a href="#education" class="waves-effect waves-light">My Education</a></li>
+          <li><a href="#experience" class="waves-effect waves-light">Previous Experience</a></li>
+          <li><a href="#stacks" class="waves-effect waves-light">Stacks</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
   <script async src="https://cdn1.stackshare.io/javascripts/client-code.js" charset="utf-8"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="main.js"></script>
