--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
     </nav>
   </div>
 
+  <div class="container">
+
+    <h2 class="grey-text">Hello there!</h2>
+
+    <img src="./assets/PP.png" alt="" height="200" width="200" class="responsive-img circle left z-depth-5">
+
+    <div class="fixed-action-btn">
+      <a href="#" class="btn-floating blue btn-large waves-effect waves-light hoverable pulse"><i class="large material-icons">android</i></a>
+      <ul>
+        <li><a href="https://github.com/kneric" target="_blank" class="btn-floating green btn-large waves-effect waves-light"><i class="large material-icons">person</i></a></li>
+        <li><a href="mailto:brian.pradipta.a@gmail.com?subject=Hello%20Brian" class="btn-floating red btn-large waves-effect waves-light"><i class="large material-icons">contact_mail</i></a></li>
+        <li><a href="https://www.linkedin.com/in/brianpradipta" class="btn-floating purple btn-large waves-effect waves-light"><i class="large material-icons">business_center</i></a></li>
+      </ul>
+    </div>
+
+
+
+  </div>
+
+  <div style="height:600px"></div>
+
   <script async src="https://cdn1.stackshare.io/javascripts/client-code.js" charset="utf-8"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="main.js"></script>
