--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
       </ul>
     </div>
 
+    <div class="row">
+      <div class="col s12 m7">
+        <div id="about" class="card blue darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">About Me</span>
+            <p>When i was 9 years old, my parents made a mistake to let me use the computer. As a kid, I spent many hours every day to play pinball game and paint(yes, i know...) on my computer. Fast forward today, I still spend most of my day in front of computer, though I don't play pinball and paint anymore. In my twenties, I decided to join <a class="black-text "href="https://hacktiv8.com/">Hacktiv8</a> --a bootcamp program to become full-stack web developer-- and immerse myself in a world of programming ever since. </p>
+            </div>
+        </div>
+      </div>
+    </div>
+
 
 
   </div>
