--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col s12 m8">
+        <div id="education" class="card blue darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">My Education</span>
+            <ul class="collection">
+              <li class="collection-item white black-text"><strong>Hacktiv8 </strong>(2018)<br>I learned to be a full-stack web developer here
+              </li>
+              <li class="collection-item white black-text"><strong>Universitas Airlangga </strong>(2011-2016 <br> I took Psychology major here
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
   </div>
