--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col s12 m8">
+        <div id="experience" class="card blue darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">Previous Experience</span>
+            <ul class="collection">
+              <li class="collection-item white black-text"><strong>PT Jaya Konstruksi </strong>(2016)<br>My position was HR Training staff and responsible for in-house training "engineering training"
+              </li>
+              <li class="collection-item white black-text"><strong>LP3T UNAIR </strong>(2014-2015) <br> I was an intern and responsible for psychological testing selection and recruitment process
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
   </div>
