added stack card

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col s12 m8">
+        <div id="stacks" class="card blue">
+          <div class="card-content white-text">
+            <span class="card-title white-text">Stack I plan to learn</span>
+            <a data-layers="1,2,3,4" data-theme="light" data-stack-embed="true" href="https://embed.stackshare.io/stacks/embed/6e70a3e8cb006b89d688d57b8b6faa"/></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
   </div>
