fixed error based on validator html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Brian's Profile</title>
@@ -28,7 +28,7 @@
 
   <div class="container">
 
-    <h2 class="grey-text">Hello there!</h2>
+    <h2 class="white-text">Hello there!</h2>
 
     <img src="./assets/PP.png" alt="" height="200" width="200" class="responsive-img circle left z-depth-5">
 
@@ -37,7 +37,7 @@
       <ul>
         <li><a href="https://github.com/kneric" target="_blank" class="btn-floating green btn-large waves-effect waves-light"><i class="large material-icons">person</i></a></li>
         <li><a href="mailto:brian.pradipta.a@gmail.com?subject=Hello%20Brian" class="btn-floating red btn-large waves-effect waves-light"><i class="large material-icons">contact_mail</i></a></li>
-        <li><a href="https://www.linkedin.com/in/brianpradipta" class="btn-floating purple btn-large waves-effect waves-light"><i class="large material-icons">business_center</i></a></li>
+        <li><a href="https://www.linkedin.com/in/brianpradipta" target="_blank" class="btn-floating purple btn-large waves-effect waves-light"><i class="large material-icons">business_center</i></a></li>
       </ul>
     </div>
 
@@ -46,7 +46,7 @@
         <div id="about" class="card blue darken-1">
           <div class="card-content white-text">
             <span class="card-title">About Me</span>
-            <p>When i was 9 years old, my parents made a mistake to let me use the computer. As a kid, I spent many hours every day to play pinball game and paint(yes, i know...) on my computer. Fast forward today, I still spend most of my day in front of computer, though I don't play pinball and paint anymore. In my twenties, I decided to join <a class="black-text "href="https://hacktiv8.com/">Hacktiv8</a> --a bootcamp program to become full-stack web developer-- and immerse myself in a world of programming ever since. </p>
+            <p>When i was 9 years old, my parents made a mistake to let me use the computer. As a kid, I spent many hours every day to play pinball game and paint(yes, i know...) on my computer. Fast forward today, I still spend most of my day in front of computer, though I don't play pinball and paint anymore. In my twenties, I decided to join <a class="black-text" href="https://hacktiv8.com/">Hacktiv8</a> --a bootcamp program to become full-stack web developer-- and immerse myself in a world of programming ever since. </p>
             </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
         <div id="stacks" class="card blue">
           <div class="card-content white-text">
             <span class="card-title white-text">Stack I plan to learn</span>
-            <a data-layers="1,2,3,4" data-theme="light" data-stack-embed="true" href="https://embed.stackshare.io/stacks/embed/6e70a3e8cb006b89d688d57b8b6faa"/></a>
+            <a data-layers="1,2,3,4" data-theme="light" data-stack-embed="true" href="https://embed.stackshare.io/stacks/embed/6e70a3e8cb006b89d688d57b8b6faa"></a>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
 
   <div style="height:600px"></div>
 
-  <script async src="https://cdn1.stackshare.io/javascripts/client-code.js" charset="utf-8"></script>
+  <script async src="https://cdn1.stackshare.io/javascripts/client-code.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
