--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <div style="height:600px"></div>
 
   <script async src="https://cdn1.stackshare.io/javascripts/client-code.js"></script>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 </body>
